Added Imgs to Logo section in portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -292,39 +292,76 @@
         <div class="tz-gallery">
 
             <div class="row">
-
                 <div class="gallery_img landscape col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Poster.jpg">
-                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tPoster.jpg" alt="Poster">
-                        <p class="mt-n4">Poster</p>
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/MeritGuideLogo.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/MeritGuideLogo.jpg" alt="MeritGuide">
+                        <p class="mt-n4">Merit Guide</p>
                     </a>
                 </div>
-                <div class="gallery_img landscape col-sm-6 col-md-4 my-auto">
-                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/plaCard4hanging.jpg">
-                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tplaCard4hanging.jpg" alt="Placards">
-                        <p class="mt-n4">Pla-Card</p>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/S4interiors.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/S4interiors.jpg" alt="S4 Interiors">
+                        <p class="mt-n4">S4 Interiors</p>
                     </a>
                 </div>
-                <div class="gallery_img portrait col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/foodToken.jpg">
-                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tfoodToken.jpg" alt="FoodToken">
-                        <p class="mt-n4">Food Token</p>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/S4interiors2.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/S4interiors2.jpg" alt="S4 Interiors 2">
+                        <p class="mt-n4">S4 Interiors</p>
                     </a>
                 </div>
-                <div class="gallery_img portrait col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/VolunteerIDcard.jpg">
-                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tVolunteerIDcard.jpg" alt="VolunteerIDcard">
-                        <p class="mt-n4">Volunteer IDcard</p>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/S4interiors3.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/S4interiors3.jpg" alt="S4 Interiors 3">
+                        <p class="mt-n4">S4 Interiors</p>
                     </a>
                 </div>
-                <div class="gallery_img portrait col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/Co-ordinatorID.jpg">
-                        <img src="img/GraphicsDesignGallery/Workshops/Nutz_n_Boltz/tCo-ordinatorID.jpg" alt="Co-ordinatorID">
-                        <p class="mt-n4">Co-ordinator IDcard</p>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/S4interiors4.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/S4interiors4.jpg" alt="S4 Interiors 4">
+                        <p class="mt-n4">S4 Interiors</p>
                     </a>
                 </div>
-            </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/S4interiors5.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/S4interiors5.jpg" alt="S4 Interiors 5">
+                        <p class="mt-n4">S4 Interiors</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/YogWebWorks.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/YogWebWorks.jpg" alt="YogWebWorks">
+                        <p class="mt-n4">YogWebWorks</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/YogWebWorksBlack.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/YogWebWorksBlack.jpg" alt="YogWebWorks 2">
+                        <p class="mt-n4">YogWebWorks</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/TimeRisers.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/TimeRisers.jpg" alt="Time Risers">
+                        <p class="mt-n4">Time Risers</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/MadCompany.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/MadCompany.jpg" alt="Mad Company">
+                        <p class="mt-n4">Mad Company</p>
+                    </a>
+                </div>
+                <div class="gallery_img landscape col-sm-6 col-md-4">
+                    <a class="lightbox" href="img/GraphicsDesignGallery/Logos/ChakriLogo.jpg">
+                        <img src="img/GraphicsDesignGallery/Logos/Thumb/ChakriLogo.jpg" alt="bulzai">
+                        <p class="mt-n4">bulzai</p>
+                    </a>
+                </div>
 
+
+
+            </div>
         </div>
 
 
