Made changes in footer to auto pick current year

--- a/about.html
+++ b/about.html
@@ -261,7 +261,11 @@
 
 
             </ul>
-            <p class="text-muted small mb-0">Copyright &copy; yogadurganath.github.io 2019</p>
+            <p class="text-muted small mb-0">Copyright &copy; yogadurganath.github.io
+                <script>
+                    document.write(new Date().getUTCFullYear());
+                </script>
+            </p>
         </div>
     </footer>
 
