Modified Portfolio design

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="Hello I am Yoga Durganath, I'm a Web developer with experience in creating responsive websites. Explore my portfolio and contact me if you are looking for Freelancer.">
+    <meta name="keywords" content="Web developer">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>YOGIDESINA|DESINA YOGA DURGA NATH</title>
+    <title>Home | YOGA DURGANATH DESINA</title>
 </head>
 
 <body>
@@ -103,17 +104,23 @@
 
 
 
-    <div id="nav_pos" class="container-fluid p-3 mb-2 bg-info text-white">
-
-        <br />
-        <br />
-        <h1>
-            <center>WELCOME TO MY PORTFOLIO.</center>
-        </h1><br />
-        <h5 class="txt-int text-justify">This is my portfolio where I try to showcase my skills and works I have done. I Love coding espically designing and building creative projects and responsive websites. I have good knowledge in designing softwares Adobe Photoshop, Adobe Illustrator,
-            Adobe XD.</h5>
-        <center><a href="about.html" class="btn btn-secondary btn-lg">About Me</a>
-            <a href="portfolio.html" class="btn btn-secondary btn-lg">My Portfolio</a></center>
+    <div id="nav_pos" style="min-height: 100vh;" class="container-fluid p-3 mb-2 bg-info text-white">
+        <div class="mt-5 p-4">
+            <h3 class="text-center">
+                Hello there!
+                <br>
+                WELCOME TO MY PORTFOLIO.
+            </h3>
+        </div>
+        <h5 class="container 5 txt-int text-justify">
+            I'm a Web Developer with 3+ year Hands on experience in making responsive web pages using HTML, CSS, JavaScript and Bootstrap. I have good knowledge in designing webpages and making logos. I can make your website responsive for PC, tablet and mobile. 
+            <br>
+            <br>
+            This is my portfolio where I try to showcase my skills and works I have done. I Love coding espically designing and building creative projects and responsive websites. I have good knowledge in designing softwares Adobe Photoshop, Adobe Illustrator,
+            Adobe XD.
+        </h5>
+        <div class="mt-3 text-center"><a href="about.html" class="btn btn-secondary btn-lg">About Me</a>
+            <a href="portfolio.html" class="btn btn-secondary btn-lg">My Portfolio</a></div>
 
     </div>
 
