--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
 
     <div class="container gallery-container">
 
-        <h3 class="text-center my-3 pt-3">Coding Projects</h3>
+        <h3 class="text-center my-3 py-3">Websites</h3>
         <!-- Slider -->
         <div class="workslider">
             <i class="fa fa-chevron-left prev"></i>
@@ -97,41 +97,38 @@
             <div class="tile-wrapper">
                 <!-- Tiles start here -->
                 <div class="tile">
-                    <img src="Work1.png" alt="" class="slider-img">
+                    <a href="https://sriramacatering.com"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621878695/My%20portfolio/SriRamaCatering_f5yuzi.jpg" alt="" class="slider-img"></a>
                     <div class="post-info pl-3">
                         <h5 class="font-weight-bold">Food Catering Website</h5>
-                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
-                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://sriramacatering.com">www.sriramacatering.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>Created using Web builder</h6>
                     </div>
                 </div>
-
                 <div class="tile">
-                    <img src="Work1.png" alt="" class="slider-img">
+                    <a href="https://www.suhasvarma.com/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621076400/My%20portfolio/suhasvarma_eircpj.jpg" alt="" class="slider-img"></a>
                     <div class="post-info pl-3">
-                        <h5 class="font-weight-bold">Food Catering Website</h5>
-                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
-                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                        <h5 class="font-weight-bold">Suhas Varma Portfolio</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://www.suhasvarma.com/">www.sushavarma.com</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS and Bootstrap</h6>
                     </div>
                 </div>
-
                 <div class="tile">
-                    <img src="Work1.png" alt="" class="slider-img">
+                    <a href="https://picbuddy.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621878546/My%20portfolio/Picbuddy_oouydn.jpg" alt="" class="slider-img"></a>
                     <div class="post-info pl-3">
-                        <h5 class="font-weight-bold">Food Catering Website</h5>
-                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
-                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                        <h5 class="font-weight-bold">Picbuddy Pvt. Ltd.</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://picbuddy.in/">www.picbuddy.in</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
                     </div>
                 </div>
-
                 <div class="tile">
-                    <img src="Work1.png" alt="" class="slider-img">
+                    <a href="https://s4interiors.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621883144/My%20portfolio/s4interiors_vut2qs.jpg" alt="" class="slider-img"></a>
                     <div class="post-info pl-3">
-                        <h5 class="font-weight-bold">Food Catering Website</h5>
-                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="http://sriramacatering.com">www.sriramacatering.com</a></h6>
-                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript & APIs</h6>
+                        <h5 class="font-weight-bold">Picbuddy Pvt. Ltd.</h5>
+                        <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://s4interiors.in/">www.s4interiors.in</a></h6>
+                        <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
                     </div>
                 </div>
-
+             
 
 
 
@@ -151,11 +148,11 @@
                     <h4>Workshops/Events</h4>
                 </a>
             </div>
-            <div class="col-sm">
+            <!-- <div class="col-sm">
                 <a href="#wlps">
                     <h4>Wall posters</h4>
                 </a>
-            </div>
+            </div> -->
             <div class="col-sm">
                 <a href="#looogos">
                     <h4>Logos</h4>
@@ -232,7 +229,7 @@
 
         </div>
 
-        <h4 class="page-description text-center ascrolllink" id="wlps">
+        <!-- <h4 class="page-description text-center ascrolllink" id="wlps">
             Wall posters
         </h4>
         <p class="gallery_title ml-5">Cyber Security and Networking<span class="event_details">&nbsp; Lab Posters</span></p>
@@ -301,7 +298,7 @@
                 </div>
             </div>
 
-        </div>
+        </div> -->
         <h4 class="page-description text-center ascrolllink" id="looogos">Logos</h4>
         <!-- <p class="gallery_title ml-5">Nutz n bolts <span class="event_details">Mechanical dept. synposium</span></p> -->
         <div class="tz-gallery">
@@ -355,7 +352,7 @@
                         <p class="mt-n4">YogWebWorks</p>
                     </a>
                 </div>
-                <div class="gallery_img landscape col-sm-6 col-md-4">
+                <!-- <div class="gallery_img landscape col-sm-6 col-md-4">
                     <a class="lightbox" href="img/GraphicsDesignGallery/Logos/TimeRisers.jpg">
                         <img src="img/GraphicsDesignGallery/Logos/Thumb/TimeRisers.jpg" alt="Time Risers">
                         <p class="mt-n4">Time Risers</p>
@@ -372,7 +369,7 @@
                         <img src="img/GraphicsDesignGallery/Logos/Thumb/ChakriLogo.jpg" alt="bulzai">
                         <p class="mt-n4">bulzai</p>
                     </a>
-                </div>
+                </div> -->
 
 
 
