Home page updated

--- a/about.html
+++ b/about.html
@@ -56,14 +56,14 @@
                         </div><span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <!-- <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="portfolio.html">
                         <div class="iconContainer">
                             <div class="divTxt">Portfolio</div>
                             <div class="divIcon"><i class="material-icons">assignment</i></div>
                         </div>
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="contact.html">
                         <div class="iconContainer">
