--- a/contact.html
+++ b/contact.html
@@ -57,14 +57,14 @@
                         </div>
                     </a>
                 </li>
-                <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <!-- <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="portfolio.html">
                         <div class="iconContainer">
                             <div class="divTxt">Portfolio</div>
                             <div class="divIcon"><i class="material-icons">assignment</i></div>
                         </div>
                     </a>
-                </li>
+                </li> -->
                 <li class="nav-item active" data-toggle="collapse" data-target=".navbar-collapse.show">
                     <a class="nav-link" href="index.html#contact">
                         <div class="iconContainer">
