--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="d-flex justify-content-center align-items-end">
                     <a href="about.html"><button class="btn btn-secondary btn-small mr-1">Know more</button></a>
-                    <a href="portfolio.html"><button class="btn btn-secondary btn-small ml-1">Download Resume</button></a>
+                    <a href="https://www.dropbox.com/s/knpnm1ex4txq9pe/YOGA%20DURGANATH%20DESINA%202.pdf?dl=0" target="_blank"><button class="btn btn-secondary btn-small ml-1">Download Resume</button></a>
                 </div>
 
             </div>
@@ -134,6 +134,22 @@
         <div class="tile-wrapper">
             <!-- Tiles start here -->
             <div class="tile">
+                <a href="https://picbuddy.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621878546/My%20portfolio/Picbuddy_oouydn.jpg" alt="" class="slider-img"></a>
+                <div class="post-info pl-3">
+                    <h5 class="font-weight-bold">Picbuddy Pvt. Ltd.</h5>
+                    <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://picbuddy.in/">www.picbuddy.in</a></h6>
+                    <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
+                </div>
+            </div>
+            <div class="tile">
+                <a href="https://s4interiors.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621883144/My%20portfolio/s4interiors_vut2qs.jpg" alt="" class="slider-img"></a>
+                <div class="post-info pl-3">
+                    <h5 class="font-weight-bold">S4 Interiors</h5>
+                    <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://s4interiors.netlify.app/">www.s4interiors.in</a></h6>
+                    <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
+                </div>
+            </div>
+            <div class="tile">
                 <a href="https://sriramacatering.com"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621878695/My%20portfolio/SriRamaCatering_f5yuzi.jpg" alt="" class="slider-img"></a>
                 <div class="post-info pl-3">
                     <h5 class="font-weight-bold">Food Catering Website</h5>
@@ -149,29 +165,9 @@
                     <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS and Bootstrap</h6>
                 </div>
             </div>
-            <div class="tile">
-                <a href="https://picbuddy.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621878546/My%20portfolio/Picbuddy_oouydn.jpg" alt="" class="slider-img"></a>
-                <div class="post-info pl-3">
-                    <h5 class="font-weight-bold">Picbuddy Pvt. Ltd.</h5>
-                    <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://picbuddy.in/">www.picbuddy.in</a></h6>
-                    <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
-                </div>
-            </div>
-            <div class="tile">
-                <a href="https://s4interiors.in/"><img style="object-fit: contain;" src="https://res.cloudinary.com/dibrmdji0/image/upload/v1621883144/My%20portfolio/s4interiors_vut2qs.jpg" alt="" class="slider-img"></a>
-                <div class="post-info pl-3">
-                    <h5 class="font-weight-bold">Picbuddy Pvt. Ltd.</h5>
-                    <h6><i class="fa fa-link">&nbsp;&nbsp;</i><a href="https://s4interiors.in/">www.s4interiors.in</a></h6>
-                    <h6><i class="fa fa-code">&nbsp;&nbsp;</i>HTML, CSS, JavaScript and Bootstrap</h6>
-                </div>
-            </div>
-         
-
-
-
         </div>
     </div>
-
+    
 
     <h3 class="text-center my-3">Graphics Design Works</h3>
     <div class="row mx-4 my-5">
