--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="text">
                     <p class="heythere">Hey there!</p>
-                    <span class="im">I'm</span> <span class="highlight mbhide">YOGA DURGANATH DESINA</span>
+                    <span class="im">I'm</span> <span class="highlight mbhide">YOGA DURGANATH D</span>
                     <span class="highlight mbshow">YOGA DURGANATH</span>
                     <br> <p>Welcome to my portfolio</p>
                 </div>
